--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,21 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <script type='text/javascript'>
+      window.danterestLogo = "<%= image_url('danterest.jpeg')%>"
+      window.dLogo = "<%= image_url('d.jpeg')%>"
+    </script>
+    <% if current_user %>
+      <script>
+        window.currentUser = {
+          "username": "<%= current_user.username%>", 
+          "email": "<%= current_user.email%>", 
+          "id": "<%=current_user.id%>",
+          "age": "<%=current_user.age%>"
+        };
+      </script>
+    <%end%>
   </head>
-
 
   <body>
     <%= yield %>
