--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -8,18 +8,26 @@
   width: 25px;
   height: auto;
   margin-top: 5px;
-  margin: 10px;
+  padding: 10px;
 };
+
+// .home-logo2:hover {
+//   border: solid 1px;
+//   border-radius: 100pc;
+//   background-color: aliceblue;
+//   border-color: aliceblue;
+// }
 
 .home-link {
   border: solid 2px;
   border-radius: 25px;
   padding: 16px;
-  background-color: rgb(26, 26, 26);
+  background-color: rgb(21, 21, 21);
   color: azure;
   text-decoration: none;
   font-size: medium;
-  font-family: Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
 }
 
 .home-links-loggedin {
