completed functional UserAuth

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <script type='text/javascript'>
-      window.danterestLogo = "<%= image_url('danterest.jpeg')%>"
+      window.danterestLogo = "<%= image_url('danterestLogo.png')%>"
       window.dLogo = "<%= image_url('d.jpeg')%>"
     </script>
     <% if current_user %>
