--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -1,15 +1,31 @@
 .home-logo1 img{
   width: 150px;
-  height: auto;
-  margin-top: -30px;
+  margin-top: 5px;
 };
 
-.home-logo2 img{
-  width: 25px;
-  height: auto;
-  margin-top: 5px;
-  padding: 10px;
+.home-logo2 {
+  width: 24px;
+  height: 24px;
+  padding: 24px;
+  margin-left: -24px;
 };
+
+.nav-greeting {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 24px;
+}
+
+.nav-logout {
+  margin-left: 16px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  border-radius: 24px;
+  background: grey;
+  padding: 0px 16px;
+}
 
 // .home-logo2:hover {
 //   border: solid 1px;
@@ -19,40 +35,78 @@
 // }
 
 .home-link {
-  border: solid 2px;
-  border-radius: 25px;
-  padding: 16px;
-  background-color: rgb(21, 21, 21);
-  color: azure;
+  display: flex;
+  align-items: center;
+  height: 48px;
+  border-radius: 24px;
+  padding: 0px 16px;
+  background-color: rgb(17, 17, 17);
+  color: white;
   text-decoration: none;
-  font-size: medium;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: bold;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.logo-wrapper {
+  margin-left: 24px;
+  display: flex;
+  height: 80px;
+  align-items: center;
 }
 
 .home-links-loggedin {
   display: flex;
+  align-items: center;
+  height: 80px;
 }
 
 .navbar {
+  height: 80px;
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  box-shadow: 0px 0px 40px 12px rgba(0, 0, 0, 0.03)
 };
 
 .login-signup {
   display: flex;
-  margin-top: 10px;
+  height: 80px;
+  align-items: center;
+  margin-right: 20px;
 }
 
-.login {
-  margin: 2px;
-  padding: 2px;
+.login-signup > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 24px;
+  padding: 8px 12px;
+  height: 40px;
+  margin: 8px;
+  font-weight: 600;
 }
 
-.sign-up {
-  margin: 2px;
-  padding: 2px;
+.login-btn {
+  background: rgb(230, 0, 35);
+  color: white;
+}
+
+.login-btn:hover {
+  cursor: pointer;
+  background: rgb(173, 8, 27);
+}
+
+.signup-btn {
+  background: rgb(239, 239, 239);
+  color: rgb(0, 0, 0);
+}
+
+.signup-btn:hover {
+  cursor: pointer;
+  background: rgb(226, 226, 226);
 }
 
 .nav-username {
@@ -60,19 +114,7 @@
   padding: 2px;
 }
 
-.modal-background {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.7);
-  z-index: 10;
+.nav-logout:hover {
+  cursor: pointer;
 }
 
-.modal-child {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
