--- a/app/assets/stylesheets/components/navbar_modal.scss
+++ b/app/assets/stylesheets/components/navbar_modal.scss
@@ -1,4 +1,19 @@
+.modal-background {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 10;
+}
+
 .modal-child {
-  background: azure;
-  border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  border-radius: 16px;
+  padding: 48px 64px;
 }
