--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_include_tag 'application' %>
     <script type='text/javascript'>
       window.danterestLogo = "<%= image_url('danterestLogo.png')%>"
-      window.dLogo = "<%= image_url('d.jpeg')%>"
+      window.dLogo = "<%= image_url('dlogo.png')%>"
     </script>
     <% if current_user %>
       <script>
