--- a/app/assets/stylesheets/components/session.scss
+++ b/app/assets/stylesheets/components/session.scss
@@ -33,7 +33,7 @@ input {
   padding: 12px 16px;
   font-family: inherit;
   font-size: inherit;
-  border: 1px solid grey;
+  border: 1px solid lightgray;
 }
 
 .auth-btn {
@@ -48,9 +48,14 @@ input {
   text-align: center;
 }
 
+.auth-btn:hover {
+  cursor: pointer;
+}
+
 .dan-logo2 {
   height: 40px;
   width: 40px;
+  position: relative; bottom: 32px;
 }
 
 .auth1-logo-wrapper {
@@ -65,11 +70,13 @@ input {
 
 .auth-title {
   margin-bottom: 16px;
+  color: rgb(53, 53, 53);
 }
 
 .close-x {
   display: flex;
   justify-content: flex-end;
+  position: relative; left:48px; bottom:32px;
 }
 
 .close-x:hover {
@@ -80,4 +87,9 @@ input {
   display: flex;
   justify-content: center;
   font-weight: bold;
+  padding: 16px 0px;
+}
+
+.session-form-inputs {
+  padding: 32px 0px;
 }
