--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -64,7 +64,7 @@
   height: 80px;
   display: flex;
   justify-content: space-between;
-  box-shadow: 0px 0px 40px 12px rgba(0, 0, 0, 0.03)
+  // box-shadow: 0px 0px 40px 12px rgba(0, 0, 0, 0.03)
 };
 
 .login-signup {
