--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,6 @@
 
 
 @import "base/reset.scss";
-@import 'base/colors.scss';
-@import "base/fonts.scss";
-@import "components/*";
+// @import 'base/colors.scss';
+// @import "base/fonts.scss";
+// @import "components/*";
