--- a/app/assets/stylesheets/components/pin-index.scss
+++ b/app/assets/stylesheets/components/pin-index.scss
@@ -20,3 +20,58 @@
   0% {transform: rotate(0deg);}
   100% {transform: rotate(360deg);}
 }
+
+
+// .masonry {
+//   // display: flex;
+//   // flex-flow: column wrap;
+//   max-height: 2700px; /* Adjustment for the gutter */
+//   -webkit-column-count: 3;
+//   -moz-column-count: 3;
+//   column-count: 3;
+//   column-gap: 20px;
+//   margin: 1.5em auto;
+//   box-sizing: border-box;
+//   padding: 20px;
+// }
+
+// @media only screen and (max-width: 1680px) {
+//   .masonry {
+//     -webkit-column-count: 3;
+//     -moz-column-count: 3;
+//     column-count: 3;
+
+//   }
+// }
+.masonry {
+  column-count: 7;
+  column-gap: 1.5em;
+  margin: 1.5em auto;
+  max-width: 100vw;
+  box-sizing: border-box;
+  padding: 10px;
+  column-width: 310px;
+}
+
+@media only screen and (max-width: 1201px) {
+  .masonry {
+    column-count: 4;
+    column-gap: 1.5em;
+    margin: 1.5em auto;
+    max-width: 100vw;
+    box-sizing: border-box;
+    padding: 10px;
+    column-width: 310px;
+  }
+}
+
+.pin-image {
+  height: auto;
+  width: 100%;
+  border-radius: 24px;
+  cursor: zoom-in;
+  padding: 0px;
+  min-height: 215px;
+  margin: 1em 0 0;
+  display: inline-block;
+}
