--- a/app/assets/stylesheets/components/pin-index.scss
+++ b/app/assets/stylesheets/components/pin-index.scss
@@ -22,46 +22,25 @@
 }
 
 
-// .masonry {
-//   // display: flex;
-//   // flex-flow: column wrap;
-//   max-height: 2700px; /* Adjustment for the gutter */
-//   -webkit-column-count: 3;
-//   -moz-column-count: 3;
-//   column-count: 3;
-//   column-gap: 20px;
-//   margin: 1.5em auto;
-//   box-sizing: border-box;
-//   padding: 20px;
-// }
-
-// @media only screen and (max-width: 1680px) {
-//   .masonry {
-//     -webkit-column-count: 3;
-//     -moz-column-count: 3;
-//     column-count: 3;
-
-//   }
-// }
 .masonry {
-  column-count: 7;
-  column-gap: 1.5em;
+  column-count: 8;
+  column-gap: 0.5em;
   margin: 1.5em auto;
   max-width: 100vw;
   box-sizing: border-box;
   padding: 10px;
-  column-width: 310px;
+  column-width: 305px;
 }
 
 @media only screen and (max-width: 1201px) {
   .masonry {
     column-count: 4;
-    column-gap: 1.5em;
+    column-gap: 0.5em;
     margin: 1.5em auto;
     max-width: 100vw;
     box-sizing: border-box;
     padding: 10px;
-    column-width: 310px;
+    column-width: 305px;
   }
 }
 
@@ -75,3 +54,31 @@
   margin: 1em 0 0;
   display: inline-block;
 }
+
+.pin-image:hover {
+  filter: brightness(65%);
+}
+
+.index-pin {
+  margin: 0 0 1em;
+  width: 300px;
+  border-radius: 10%;
+  text-align: center;
+  page-break-inside: avoid;
+}
+
+.index-pin > h3 {
+  font-weight: 600;
+}
+
+.pin-show-image {
+  height: auto;
+  width: 100%;
+  border-radius: 32px;
+  max-width: 600px;
+  transition: transform .2s;
+}
+// .pin-show-image:hover {
+//   transform: scale(2);
+//   position: relative; left:240px; top:120px;
+// }
