--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -127,7 +127,8 @@
 
 .nav-dropdown {
   color: grey;
-  padding: 0px 8px;
+  padding: 8px 8px;
+  border-radius: 24px;
 }
 
 .nav-icons {
@@ -140,8 +141,25 @@
   background: rgb(239, 239, 239);
 }
 
+.nav-dropdown:hover {
+  background: rgb(239, 239, 239);
+}
+
 .user-greeting {
   display: flex;
   align-items: center;
   font-weight: bold;
 }
+
+.session-dropdown-box {
+  background: red
+}
+
+.dropdown-logout:hover {
+  cursor: pointer;
+}
+
+// .drop-menu-index {
+//   position: relative;
+//   top: 25px;
+// }
