--- a/app/assets/stylesheets/components/board_index.scss
+++ b/app/assets/stylesheets/components/board_index.scss
@@ -54,10 +54,15 @@
   filter: brightness(65%);
 }
 
+.create-board-button-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .create-board-button {
-  display: inline-block;
-  box-sizing: border-box;
-  align-items: center;
+  // display: inline-block;
+  // box-sizing: border-box;
+  // align-items: center;
   border-radius: 50px;
   padding: 8px 8px;
   color: rgb(17, 17, 17);
