--- a/app/assets/stylesheets/components/pins.scss
+++ b/app/assets/stylesheets/components/pins.scss
@@ -33,7 +33,6 @@
   height: 100%;
   width: 100%;
   border-radius: 32px;
-
 }
 
 .pinfo {
@@ -73,7 +72,7 @@
   font-weight: 600;
   color: white;
   cursor: pointer;
-  transition: transform .2s;
+  transition: all .5s ease;
 }
 
 .save-board-button:hover {
@@ -90,6 +89,7 @@
   cursor: pointer;
   padding: 8px;
   border-radius: 24px;
+  transition: all .5s ease;
 }
 
 .back-button:hover {
@@ -99,6 +99,10 @@
 .pin-show-image:hover {
   cursor: zoom-in;
   filter: brightness(75%);
+}
+
+.pin-show-image {
+  transition: all .5s ease;
 }
 
 
