--- a/app/assets/stylesheets/components/boards/board_index.scss
+++ b/app/assets/stylesheets/components/boards/board_index.scss
@@ -49,6 +49,7 @@
   width: 100px;
   height: 100px;
   text-decoration: none;
+  transition: all .5s ease;
 }
 
 .bii:hover {
@@ -88,6 +89,7 @@
 
 .drop-create-pin-button {
   font-weight: bold;
+  transition: all .35s ease;
 }
 
 .drop-create-pin-button:hover {
@@ -98,6 +100,7 @@
 
 .drop-create-board-button {
   font-weight: bold;
+  transition: all .35s ease;
 }
 
 .drop-create-board-button:hover {
@@ -110,6 +113,7 @@
   border-radius: 50px;
   padding: 8px 8px;
   color: rgb(17, 17, 17);
+  transition: all .5s ease;
 }
 .board-pin-create-button:hover {
   cursor: pointer;
