--- a/app/assets/stylesheets/components/boards/board_edit.scss
+++ b/app/assets/stylesheets/components/boards/board_edit.scss
@@ -39,3 +39,24 @@
   cursor: pointer;
   background: rgb(173, 8, 27);
 }
+
+.final-board-delete-btn {
+  background: rgb(230, 0, 35);
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 24px;
+  padding: 8px 12px;
+  height: 40px;
+  font-weight: 600;
+}
+
+.final-board-delete-btn:hover {
+  cursor: pointer;
+  background: rgb(173, 8, 27);
+}
