Fixed board delete method to satisfaction

--- a/app/assets/stylesheets/components/boards/board_edit.scss
+++ b/app/assets/stylesheets/components/boards/board_edit.scss
@@ -1,9 +1,9 @@
-.board-edit-container {
+.board-edit-container-display {
   width: 20vw;
   height: 20vh;
 }
 
-.board-edit-container > div:first-child {
+.board-edit-container-display > div:first-child {
   display: flex;
   justify-content: center;
   font-size: x-large;
