--- a/app/assets/stylesheets/components/boards/board_index.scss
+++ b/app/assets/stylesheets/components/boards/board_index.scss
@@ -59,7 +59,7 @@
 
 .create-board-button-container {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 
@@ -109,13 +109,15 @@
   border-radius: 8px;
 }
 
-.board-pin-create-button {
+
+.def-btn {
   border-radius: 50px;
   padding: 8px 8px;
   color: rgb(17, 17, 17);
   transition: all .5s ease;
 }
-.board-pin-create-button:hover {
+
+.def-btn:hover {
   cursor: pointer;
   background: rgb(239, 239, 239);
 }
