fixed redux cycle for user edit

--- a/app/assets/stylesheets/components/boards/board_i_dropdown.scss
+++ b/app/assets/stylesheets/components/boards/board_i_dropdown.scss
@@ -1,6 +1,6 @@
 .pin-show-board-index {
   position: absolute;
-  right: 200px;
+  // right: 200px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   padding: 8px;
   // margin: 10px;
@@ -8,3 +8,4 @@
   z-index: inherit;
   background: white;
 }
+
