added profile photo to nav dropdown

--- a/app/assets/stylesheets/components/boards/board_index.scss
+++ b/app/assets/stylesheets/components/boards/board_index.scss
@@ -31,8 +31,14 @@
 .profile-name {
   // display: flex;
   // justify-content: center;
-  font-size: xx-large;
+  font-size: 18px;
   color: (69, 69, 69)
+}
+
+.profile-surnames {
+  font-size: 42px;
+  padding: 8px;
+  font-weight: bold;
 }
 
 .bii {
