--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -217,10 +217,10 @@
   padding: 8px
 }
 
-.dropdown-ul:hover {
-  background: rgb(239, 239, 239);
-  border-radius: 8px;
-}
+// .dropdown-ul:hover {
+//   background: rgb(239, 239, 239);
+//   border-radius: 8px;
+// }
 
 h6 {
   color: rgb(70, 70, 70);
@@ -266,4 +266,19 @@ h6 {
 
 .user-dropdown-button {
   transition: all .35s ease;
+}
+
+.dropdown-profile {
+  display: flex;
+  flex-direction: row;
+}
+
+.dropdown-profile:hover {
+  background: rgb(239, 239, 239);
+  border-radius: 8px;
+}
+
+.account-circle-drop {
+  color: rgb(69, 69, 69);
+  // margin-top: 4px;
 }
