--- a/app/assets/stylesheets/components/boards/board_index.scss
+++ b/app/assets/stylesheets/components/boards/board_index.scss
@@ -28,6 +28,10 @@
   align-items: center;
 }
 
+.profile-picture {
+  color: rgb(44, 44, 44)
+}
+
 .profile-name {
   // display: flex;
   // justify-content: center;
