fixed pin on board dropdown

--- a/app/assets/stylesheets/components/boards/board_i_dropdown.scss
+++ b/app/assets/stylesheets/components/boards/board_i_dropdown.scss
@@ -64,8 +64,9 @@
   flex-direction: row;
 }
 
-// .create-board-drop-btn {
-//   position: relative;
-//   bottom: 8px
-// }
+.create-board-drop-btn {
+  position: relative;
+  top: 12px;
+  left: 4px;
+}
 
