--- a/app/assets/stylesheets/components/navbar_modal.scss
+++ b/app/assets/stylesheets/components/navbar_modal.scss
@@ -8,6 +8,10 @@
   z-index: 10;
 }
 
+.modal-background:hover {
+  cursor: zoom-out;
+}
+
 .modal-child {
   position: absolute;
   top: 50%;
@@ -16,4 +20,9 @@
   background: white;
   border-radius: 16px;
   padding: 48px 64px;
+  z-index: 11;
+}
+
+.modal-child:hover {
+  cursor: default;
 }
