--- a/app/assets/stylesheets/components/boards/board.css
+++ b/app/assets/stylesheets/components/boards/board.css
@@ -1,11 +1,11 @@
-.board-show-container {
+/* .board-show-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
+} */
 
 .board-info-title > h1 {
   font-size: xx-large;
