--- a/app/assets/stylesheets/components/boards/board.scss
+++ b/app/assets/stylesheets/components/boards/board.scss
@@ -1,6 +1,7 @@
 .board-show-container {
-  display: flex;
-  justify-content: center;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
 }
 
 .board-info-title > h1 {
