--- a/app/assets/stylesheets/components/boards/board_index.scss
+++ b/app/assets/stylesheets/components/boards/board_index.scss
@@ -77,7 +77,7 @@
   text-decoration: none;
 }
 
-.board-pin-drop-menu-index > div {
+.board-pin-drop-menu-index > * {
   padding: 8px;
   padding-right: 100px;
 }
@@ -100,6 +100,8 @@
 .drop-create-pin-button {
   font-weight: bold;
   transition: all .35s ease;
+  color: rgb(17, 17, 17);
+  text-decoration: none;
 }
 
 .drop-create-pin-button:hover {
@@ -111,6 +113,7 @@
 .drop-create-board-button {
   font-weight: bold;
   transition: all .35s ease;
+  color: rgb(17, 17, 17)
 }
 
 .drop-create-board-button:hover {
@@ -131,6 +134,7 @@
   cursor: pointer;
   background: rgb(239, 239, 239);
 }
+
 
 
 
