--- a/app/assets/stylesheets/components/boards/board.scss
+++ b/app/assets/stylesheets/components/boards/board.scss
@@ -1,8 +1,3 @@
-.board-show-container {
-  // display: flex;
-  // flex-direction: column;
-  // align-items: center;
-}
 
 .board-info-title > h1 {
   font-size: xx-large;
@@ -34,6 +29,11 @@
 
 .board-description {
   max-width: 44vw;
+}
+
+.pin-count {
+  font-size: large;
+  font-weight: bold;
 }
 
 
