--- a/app/assets/stylesheets/components/boards/board_index.scss
+++ b/app/assets/stylesheets/components/boards/board_index.scss
@@ -102,6 +102,7 @@
   transition: all .35s ease;
   color: rgb(17, 17, 17);
   text-decoration: none;
+  // padding: 8px;
 }
 
 .drop-create-pin-button:hover {
@@ -133,6 +134,12 @@
 .def-btn:hover {
   cursor: pointer;
   background: rgb(239, 239, 239);
+}
+
+.pin-create-link {
+  padding: 8px;
+  background: red;
+  color: red;
 }
 
 
