fixed pin create / save

--- a/app/assets/stylesheets/components/pins/pins.scss
+++ b/app/assets/stylesheets/components/pins/pins.scss
@@ -47,7 +47,7 @@
 
 .pinfo-title {
   width: 100%;
-  font-size: x-large;
+  font-size: 40px;
   font-weight: 700;
   text-align: center;
   padding-top: 24px;
