--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -187,7 +187,7 @@
     padding: 8px;
     // margin: 10px;
     border-radius: 16px;
-    z-index: inherit;
+    z-index: 99999;
     background: white;
 }
 
