--- a/app/assets/stylesheets/components/session.scss
+++ b/app/assets/stylesheets/components/session.scss
@@ -43,6 +43,27 @@ input:focus {
   border-radius: 12px;
 }
 
+textarea {
+  height: 200px;
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  border-radius: 12px;
+  margin-bottom: 12px;
+  margin-top: 4px;
+  padding: 12px 16px;
+  font-family: inherit;
+  font-size: inherit;
+  border: 1px solid lightgray;
+}
+
+textarea:focus {
+  outline-offset: 0px;
+  outline: none;
+  border: 3px solid rgb(80, 125, 216);
+  border-radius: 12px;
+}
+
 .auth-btn {
   width: 100%;
   display: block;
