--- a/app/assets/stylesheets/components/pins/pins.scss
+++ b/app/assets/stylesheets/components/pins/pins.scss
@@ -52,12 +52,14 @@
   text-align: center;
   padding-top: 24px;
   padding-right: 24px;
+  max-width: 52vh;
 }
 
 .pinfo-description {
   width: 100%;
   text-align: center;
   padding-top: 15px;
+  max-width: 52vh;
 }
 
 .save-board-button-box {
