--- a/app/assets/stylesheets/components/boards/board_delete.scss
+++ b/app/assets/stylesheets/components/boards/board_delete.scss
@@ -10,7 +10,7 @@
   margin-bottom: 40px;
 }
 
-.delete-board-cancel-btn {
+.cancel-btn {
   // flex: 1;
   display: flex;
   flex-direction: row;
@@ -29,7 +29,7 @@
   color: rgb(0, 0, 0);
 }
 
-.delete-board-cancel-btn:hover {
+.cancel-btn:hover {
   background: rgb(239, 239, 239);
   cursor: pointer;
   filter: brightness(90%);
@@ -40,7 +40,7 @@
   flex-direction: column;
 }
 
-.final-board-delete-btn {
+.delete-btn {
   background: rgb(230, 0, 35);
   color: white;
   display: flex;
@@ -57,7 +57,8 @@
   transition: all .5s ease;
 }
 
-.final-board-delete-btn:hover {
+.delete-btn:hover {
   cursor: pointer;
   filter: brightness(90%);
 }
+
