--- a/app/assets/stylesheets/components/pins/pin_create.scss
+++ b/app/assets/stylesheets/components/pins/pin_create.scss
@@ -23,8 +23,8 @@
   flex-direction: row;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   border-radius: 32px;
-  min-height: 600px;
-  width: 32vw;
+  min-height: 700px;
+  width: 42vw;
 }
 
 .pin-create-file-input {
@@ -58,3 +58,56 @@
 // .pin-create-image-container {
 //   padding: 12px;
 // }
+
+#image-upload{
+  opacity: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+.image-upload-bg{
+  background-color: rgb(239, 239, 239);
+  border-radius: 12px;
+  width: 100%;
+  height: 96%;
+}
+
+.image-upload-bg:hover, .pin-image-upload-bg:hover{
+  cursor: pointer;
+  filter: brightness(90%);
+  transition: all .3s ease;
+}
+
+.pin-image-upload-bg {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 296px;
+  padding-bottom: 248px;
+  border: 3px dashed rgb(200, 200, 200);
+  margin-right: 12px;
+  margin-left: 12px;
+  position: relative;
+  top: 12px;
+  border-radius: 12px;
+}
+
+.upload-arrow {
+  color:rgb(110, 110, 100);
+  margin-bottom: 36px;
+}
+
+.upload-text {
+  font-size: 18px;
+}
+
+.pin-create-title-input::placeholder {
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.pin-create-title-input {
+  height: 60px;
+  font-size: 32px;
+  font-weight: 600;
+}
