--- a/app/assets/stylesheets/components/pins/pin-index.scss
+++ b/app/assets/stylesheets/components/pins/pin-index.scss
@@ -78,15 +78,17 @@
 }
 
 .index-pin {
-  margin: 0 0 1em;
+  // margin: 0 0 1em;
+  // margin: -16px 0 1em;
   width: 300px;
   border-radius: 10%;
-  text-align: center;
+  // text-align: center;
+  transform: translateX(0px) translateY(0px);
   page-break-inside: avoid;
-}
-
-.index-pin > h3 {
-  font-weight: 600;
+  // position: absolute;
+  // display: block;
+  // top: 0px;
+  // left: 0px;
 }
 
 .pin-show-image {
@@ -96,7 +98,31 @@
   max-width: 600px;
   transition: transform .2s;
 }
-// .pin-show-image:hover {
-//   transform: scale(2);
-//   position: relative; left:240px; top:120px;
-// }
+
+.pin-title {
+  margin-left: 2px;
+}
+
+.pin-index-author {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.pin-info-box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 8px;
+}
+
+.pin-info-box > div {
+  padding: 2px;
+}
+
+.masonry-wrap {
+  position: relative;
+  left: 10px;
+  margin-left: 72px;
+  margin-right: 72px;
+}
