--- a/app/assets/stylesheets/components/boards/board_index.scss
+++ b/app/assets/stylesheets/components/boards/board_index.scss
@@ -23,20 +23,21 @@
 .profile-info {
   // display: block;
   // box-sizing: border-box;
+  color: #111;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.profile-picture {
-  color: rgb(44, 44, 44)
-}
+// .profile-picture {
+//   color: rgb(44, 44, 44)
+// }
 
 .profile-name {
   // display: flex;
   // justify-content: center;
   font-size: 18px;
-  color: (69, 69, 69)
+  // color: (69, 69, 69)
 }
 
 .profile-surnames {
@@ -79,6 +80,10 @@
 
 .board-pin-drop-menu-index > * {
   padding: 8px;
+  // padding-right: 100px;
+  margin: 4px;
+  display: flex;
+  flex: 1;
   padding-right: 100px;
 }
 
@@ -91,21 +96,27 @@
   right: 48px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   padding: 8px;
-  // margin: 10px;
   border-radius: 16px;
   z-index: inherit;
   background: white;
 }
 
-.drop-create-pin-button {
+// .drop-create-pin-button {
+//   font-weight: bold;
+//   transition: all .35s ease;
+//   color: rgb(17, 17, 17);
+//   text-decoration: none;
+//   // padding: 8px;
+// }
+
+.pin-create-link {
+  color: #111;
+  text-decoration: none;
   font-weight: bold;
   transition: all .35s ease;
-  color: rgb(17, 17, 17);
-  text-decoration: none;
-  // padding: 8px;
 }
 
-.drop-create-pin-button:hover {
+.pin-create-link:hover {
   cursor: pointer;
   background: rgb(239, 239, 239);
   border-radius: 8px;
