--- a/app/assets/stylesheets/components/pins/pin-index.scss
+++ b/app/assets/stylesheets/components/pins/pin-index.scss
@@ -42,22 +42,22 @@
 .masonry {
   column-count: 8;
   column-gap: 0.5em;
-  margin: 1.5em auto;
+  margin: -1.5em auto;
   max-width: 100vw;
   box-sizing: border-box;
   padding: 10px;
-  column-width: 305px;
+  column-width: 260px;
 }
 
 @media only screen and (max-width: 1201px) {
   .masonry {
     column-count: 4;
     column-gap: 0.5em;
-    margin: 1.5em auto;
+    margin: -1.5em auto;
     max-width: 100vw;
     box-sizing: border-box;
     padding: 10px;
-    column-width: 305px;
+    column-width: 260px;
   }
 }
 
@@ -78,17 +78,11 @@
 }
 
 .index-pin {
-  // margin: 0 0 1em;
-  // margin: -16px 0 1em;
-  width: 300px;
+  height: auto;
+  width: 250px;
   border-radius: 10%;
-  // text-align: center;
   transform: translateX(0px) translateY(0px);
   page-break-inside: avoid;
-  // position: absolute;
-  // display: block;
-  // top: 0px;
-  // left: 0px;
 }
 
 .pin-show-image {
