--- a/app/assets/stylesheets/components/pins/pin-index.scss
+++ b/app/assets/stylesheets/components/pins/pin-index.scss
@@ -46,7 +46,7 @@
   max-width: 100vw;
   box-sizing: border-box;
   padding: 10px;
-  column-width: 260px;
+  column-width: 280px;
 }
 
 @media only screen and (max-width: 1201px) {
@@ -57,7 +57,7 @@
     max-width: 100vw;
     box-sizing: border-box;
     padding: 10px;
-    column-width: 260px;
+    column-width: 280px;
   }
 }
 
@@ -66,7 +66,6 @@
   width: 100%;
   border-radius: 24px;
   cursor: zoom-in;
-  padding: 0px;
   min-height: 215px;
   margin: 1em 0 0;
   display: inline-block;
@@ -83,6 +82,7 @@
   border-radius: 10%;
   transform: translateX(0px) translateY(0px);
   page-break-inside: avoid;
+  margin: 0 0 1em;
 }
 
 .pin-show-image {
