--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -268,6 +268,10 @@ h6 {
   transition: all .35s ease;
 }
 
+.user-dropdown-button:hover {
+  cursor: pointer;
+}
+
 .dropdown-profile {
   display: flex;
   flex-direction: row;
