--- a/app/assets/stylesheets/components/navbar/navbar.scss
+++ b/app/assets/stylesheets/components/navbar/navbar.scss
@@ -291,6 +291,6 @@ h6 {
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
-  z-index: 10000000;
+  z-index: 9;
   background: white;
 }
