--- a/app/assets/stylesheets/components/misc/foot_button.scss
+++ b/app/assets/stylesheets/components/misc/foot_button.scss
@@ -10,6 +10,10 @@
   margin-bottom: 52px;
 }
 
+.footer-button:hover {
+  background: rgb(239, 239, 239);
+}
+
 .footer-container {
   display: flex;
   justify-content: flex-end;
