added functionality to search bar

--- a/app/assets/stylesheets/components/search/real_search.scss
+++ b/app/assets/stylesheets/components/search/real_search.scss
@@ -1,11 +1,7 @@
-.search-container {
-  // width: 81vw;
-  // height: 80vh;
-  // position: absolute;
-  // top: -110px;
-  // left: -54px;
+.search-wrapper {
+  flex: 1;
+  margin-right: 24px;
 }
-
 
 .search-proper {
   display: flex;
