--- a/app/assets/stylesheets/components/search/search.scss
+++ b/app/assets/stylesheets/components/search/search.scss
@@ -18,3 +18,11 @@
 #search-icon {
   margin-right: 8px;
 }
+
+.fa-search {
+  position: absolute;
+  top: 31px;
+  left: 1842px;
+  z-index: 10;
+  color: grey;
+}
