--- a/app/assets/stylesheets/components/search/real_search.scss
+++ b/app/assets/stylesheets/components/search/real_search.scss
@@ -36,20 +36,31 @@
   border-bottom-left-radius: 16px;
   border-bottom-right-radius: 16px;
   padding: 24px;
+}
 
+.pin-search-index {
   column-count: 8;
   column-gap: 0.5em;
   box-sizing: border-box;
   column-width: 272px;
+  padding: 20px;
 }
 
 @media only screen and (max-width: 1201px) {
-  .show-results {
+  .pin-search-index {
     column-count: 4;
     column-gap: 0.3em;
     box-sizing: border-box;
     column-width: 272px;
   }
+}
+
+.user-search-index {
+  column-count: 8;
+  column-gap: 0.5em;
+  box-sizing: border-box;
+  column-width: 272px;
+  padding: 20px;
 }
 
 .show-results-wrap {
@@ -72,5 +83,10 @@
 
 .pin-results-header {
   font-size: 24px;
+  font-weight: 600;
+}
+
+.search-user-name {
+  font-size: 16px;
   font-weight: 600;
 }
