--- a/app/assets/stylesheets/components/boards/board_index.scss
+++ b/app/assets/stylesheets/components/boards/board_index.scss
@@ -170,6 +170,16 @@
   background-color: rgb(239, 239, 239);
 }
 
+.board-title {
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.bp-length {
+  font-size: 12px;
+}
 
 
 
