--- a/app/assets/stylesheets/components/pins/pin-index.scss
+++ b/app/assets/stylesheets/components/pins/pin-index.scss
@@ -131,3 +131,9 @@
   margin-left: 72px;
   margin-right: 72px;
 }
+
+.fade {
+  transform: translateX(0);
+  opacity: 1.0;
+  transition: all 500ms;
+}
